# pymstar

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
pymstar/: __init__.py  msdbs1.d
signature/: mstar.pyf
src/: msemsg.f  mserf1.f  msid2z.f  mspaul.f  msrdb1.f  msseal.f  msspl1.f  msspl2.f  mssubs.f  mstar.f  mstar1.f
