[build-system]
requires = [
    "scikit-build-core[pyproject]>=0.2.0",
    "numpy"
]
build-backend = "scikit_build_core.build"

[project]
name = "pymstar"
description = "Python interface to MSTAR library"
version = "1.0.0"
authors = [
    {name = "Angus Hollands", email = "goosey15@gmail.com"},
]
requires-python = ">=3.7"
license = {file = "LICENSE"}

[tool.scikit-build]
minimum-version = "0.2"
build-dir = "build/{cache_tag}"